<resources>
    <!--英语考-->
    <!--英语点读学习-->
    <string name="app_name">说说英语点读学习软件</string>

    <string name="edit_text">编辑</string>
    <string name="done_text">完成</string>
    <string name="weike_every_day_text">同步微课</string>
    <string name="intell_correct_answer">正答 %1$d 题</string>
    <string name="intell_error_answer">错答 %1$d 题</string>
    <string name="weakness_knowledge">您有%1$d个薄弱知识点需改善，期待帮助您完善薄弱知识点，助您学业进步！</string>
    <string name="your_answer">你的答案:</string>
    <string name="reference_answer">参考答案:</string>
    <string name="analysis">解析</string>
    <string name="knowledge">考查知识点</string>
    <string name="select_grade">年级</string>
    <string name="click_to_skip"> 点击跳过 %d</string>
    <string name="tint">温馨提示</string>
    <string name="username_pwd">您的用户名是：%1$s，密码是：%2$s，为了保护您的账号安全，建议您修改用户名和密码</string>
    <string name="scan_qrcode">识别图中二维码</string>
    <string name="saveto_phone">保存到手机</string>
    <string name="study_hint">每天十分钟，十天学会音标</string>
    <string name="evaluating_good_result">%1$s分，good</string>
    <string name="play">播放</string>
    <string name="record">录音</string>
    <string name="playback">播放录音</string>


    <string name="main_category">微课</string>
    <string name="phonetic_introduce">音标简介</string>
    <string name="international_phonetic_introduce">国际音标简介</string>
    <string name="service_phone">客服电话：</string>
    <string name="service_wechat">客服微信：</string>
    <string name="faying_study">发音学习</string>
    <string name="faying_perception">发音感知</string>
    <string name="faying_practice">发音练习</string>
    <string name="faying_essentials">发音要领</string>
    <string name="faying_apply">发音运用</string>

    <string name="user_id">用户id:%1$s</string>
    <string name="vip_price">¥%1$s</string>
    <string name="origin_price">原价¥%1$s元</string>
    <string name="phone_tint">为了给您提供更好的服务，请填写您的联系方式</string>
    <string name="new_origin_price">原价：%1$d元</string>

    <string-array name="study_apply_array">
        <item>单词</item>
        <item>短语</item>
        <item>句子</item>
    </string-array>
    <string-array name="composition_array">
        <item>精选范文</item>
        <item>写作素材</item>
    </string-array>


    <string name="practice_progress">%1$d/3</string>


    <string name="soundmark">外教音标</string>
    <string name="exam_sat">考试真题</string>
    <string name="everyday_exercise">日常练习</string>
    <string name="search">搜索</string>
    <string name="grade">年级</string>
    <string name="topic">话题</string>
    <string name="type">类型</string>
    <string name="theme">体裁</string>
    <string name="all">全部</string>
    <string name="read_num">%1$d人阅读</string>
    <string name="continue_update">持续更新中</string>
    <string name="play_speed_result">%1$sx</string>
    <string name="go_setting">去设置</string>
    <string name="forever_vip">永久会员</string>
    <string name="bind">立即绑定</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="wx_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="privacy_statement">一、介绍\n
1.1我们深知个人信息对您的重要性，并会尽全力保护您的个人信息安全可靠。我们致力于维持您对我们的信任，恪守以下原则，保护您的个人信息：权责一致原则、目的明确原则、选择同意原则、最少够用原则、确保安全原则、主体参与原则、公开透明原则等。同时，我们承诺，我们将按业界成熟的安全标准，采取相应的安全保护措施来保护您的个人信息。\n
1.2我们制定了本隐私政策，向您提供您需要了解的有关我们如何收集和处理信息，并概述您的责任，以帮助您保护自己使用我们的产品的安全。请注意，当我们谈论“服务”时，指的是我们的所有网站，产品和服务。\n
\n二、我们收集的信息以及如何使用它\n
2.1个人信息是指以电子或者其他方式记录的能够单独或者与其他信息结合识别特定自然人身份或者反映特定自然人活动情况的各种信息。\n
2.2为完成登录，您可能需提供以下信息：您的手机号、验证码；您提供的上述信息，将在您使用本服务期间持续授权我们使用。在您注销账号时，我们将停止使用并删除上述信息。\n
2.3我们可能会使用您的联系信息与您就使用体验进行沟通，提供支持。并向您发送其他信息，如产品更新提示、官方公告、帐号安全警报等。\n
\n三、保证您的信息安全\n
3.1APP将数据存储在我们所购买的阿里云有限公司的云服务器中。其先进的安防措施包括防火墙、安全警卫系统及监控系统以尽力确保您的数据免遭自然灾害、人工入侵或其它干扰事故。\n
3.2我们实施了严格的访问控制措施，以限制只有部分员工，才有权访问或查看服务数据。而服务数据仅可用于有效的业务需求，包括但不限于提供用户服务，评估服务性能和使用情况，以及监控和改进基础设施。我们利用非公开协议、防火墙、加密保护和其他标准措施来防止未经授权访问您的信息。\n
3.3在任何情况下，我们都不会将您的数据用于任何目的。\n
3.4我们永远不会销售用户的任何信息。也不会与任何第三方共享信息。\n
\n四、软件权限说明\n
我们对于软件需要在用户使用的设备上获取的权限非常严格和克制。\n
坚决不会要求获取任何隐私权限，例如读取通话记录、读取通讯录、读取短信、获取定位、录音、拨打电话、发送短信等。\n
\n五、关于集成第三方SDK\n
APP目前已集成腾讯Bugly软件崩溃日志统计SDK、友盟统计SDK。\n
\n六、第三方链接\n
当用户访问或使用APP程序及其网站时，我们可能提供到其它第三方网站的链接，软件不对这些网站的隐私准则或内容负责。软件建议您浏览张贴在这些第三方网站上的隐私条款。</string>


</resources>
