<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.yc.soundmark.base.widget.MainToolBar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_f3efee"
        android:padding="@dimen/t10dp">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/index_phonetic_bg"
                android:orientation="vertical"
                android:paddingBottom="@dimen/t15dp"
                android:paddingTop="@dimen/t15dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/t15dp">

                    <TextView
                        android:id="@+id/tv_user_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textColor="@color/gray_b3b3b0"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/international_phonetic_introduce"
                        android:textColor="@color/black"
                        android:textSize="@dimen/t18sp" />

                </RelativeLayout>

                <include layout="@layout/activity_soundmark_introduce" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/soundmark_introduce" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/t11dp">

                    <ImageView
                        android:id="@+id/iv_avtor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/index_avtor" />

                    <ImageView

                        android:id="@+id/iv_vip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:visibility="gone"
                        android:src="@mipmap/index_vip_equities" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/t2dp"
                        android:layout_toRightOf="@id/iv_avtor"
                        android:lineSpacingExtra="@dimen/t5dp"
                        android:text="Alex Bellem 伦敦大学语言学博士\n原BBC English Learning频道\n英语老师双镜头示范音标教学!"
                        android:textColor="@color/black_565452"
                        android:textSize="@dimen/t13sp"
                        android:textStyle="bold" />


                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/t15dp"
                    android:layout_marginRight="@dimen/t15dp"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/t10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/service_phone"
                            android:textColor="@color/black_585453" />

                        <TextView
                            android:id="@+id/tv_service_tel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="phone"
                            android:textColorLink="@color/app_selected_color"
                            android:textColor="@color/app_selected_color" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/service_wechat"
                            android:textColor="@color/black_585453" />

                        <TextView
                            android:id="@+id/tv_service_wechat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/app_selected_color" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>


</LinearLayout>